--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/iam-rizz/vzcli.js.git"
+    "url": "git+https://github.com/iam-rizz/vzcli.js.git"
   },
   "bugs": {
     "url": "https://github.com/iam-rizz/vzcli.js/issues"
