--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vzcli",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "CLI tool for managing Virtualizor VPS domain/port forwarding with multi-host support",
   "main": "src/index.js",
   "bin": {
@@ -14,7 +14,7 @@
     "format": "prettier --write src/"
   },
   "engines": {
-    "node": ">=16.0.0"
+    "node": ">=16.0.0 <=24.x"
   },
   "dependencies": {
     "yargs": "^17.7.2",
